--- a/src/app/link-create/link-create.component.html
+++ b/src/app/link-create/link-create.component.html
@@ -23,7 +23,19 @@
       </div>
       <div class="form-row">
         <div class="form-group col-7">
-          <input type="text" [(ngModel)]="linkDetails.title" id="mlTitle" class="form-control" name="mlTitle" placeholder="e.g. Google search" required  minlength="3">
+          <input id="mlTitle" name="mlTitle" class="form-control" placeholder="e.g. Google search" minlength="3" required  
+          [(ngModel)]="linkDetails.title" [ngModelOptions]="{updateOn: 'blur'}">
+          <div *ngIf="linkDetails.title.invalid && (linkDetails.title.dirty || linkDetails.title.touched)" class="alert alert-danger">
+            <div *ngIf="linkDetails.title.errors.required">
+              Name is required.
+            </div>
+            <div *ngIf="linkDetails.title.errors.minlength">
+              Name must be at least 3 characters long.
+            </div>
+            <div *ngIf="linkDetails.title.errors.forbiddenName">
+              Title cannot be Title.
+            </div>
+          </div>
         </div>
       </div>
       <div class="form-row">
