--- a/src/scss/components/_mylinks.scss
+++ b/src/scss/components/_mylinks.scss
@@ -76,34 +76,30 @@
 }
 
 .ml-info-circle {
-  width: 100px;
-  height: 100px;
-  margin: 0 auto;
   border-radius: 50px;
-  font-size: 20px;
-  color: $white;
-  line-height: 100px;
-  text-align: center;
   border: 1px solid #B0B0B0;
+  color: $white;
+  font-size: 20px;
+  height: 100px;
+  line-height: 100px;
   margin-bottom: 20px;
+  margin: 0 auto;
+  text-align: center;
+  width: 100px;
 }
 
 .ml-add-item {
-    border: 0;
-    line-height: 1.429;
-    padding-left: 25px;
-    position: relative;
-    border-radius: 0;
-    margin-bottom: 0;
-    //margin: 3px;
-    border: 1px dashed #D7D7D7;
+    background-color: $white;
     background: #F3F3F3 !important;
     border-radius: 3px;
-    text-align: center;
-    padding: 0.25rem;
-    background-color: $white;
-    border-bottom: 1px solid #d7d7d7;
+    border: 0;
+    border: 1px dashed #D7D7D7;
+    line-height: 1.429;
+    margin: 0;
+    padding: 0;
+    position: relative;
     text-align: -webkit-match-parent;
+    text-align: center;
 
     a {
         text-decoration: none;
