--- a/src/app/user-links/user-links.component.html
+++ b/src/app/user-links/user-links.component.html
@@ -26,29 +26,34 @@
       </div>
     </div>
     <!-- END: My Links Header -->
+
+    <!-- BEGIN: If -->
+    <div *ngIf="Link.length !== 0">
+
     <!-- BEGIN: My Links Info Panel -->
-    <div class="card-body collapse" id="infoPanel" (collapsed)="collapsed()" (expanded)="expanded()" [collapse]="isCollapsed" #collapse="bs-collapse">
-      <button type="button" class="btn-link float-right" (click)="collapse.hide()" aria-controls="infoPanel" aria-label="Close">
-        <svg class="ml-icon ml-icon-navigation-close" focusable="false" role="presentation">
-          <use href="/assets/icons.svg#navigation-close" />
-        </svg>
-      </button>
-      <div class="ml-info-circle">
-        <svg class="ml-icon ml-icon-bookmark-solid" focusable="false" role="presentation">
-          <use href="/assets/icons.svg#bookmark-solid" />
-        </svg>
+      <div class="card-body collapse" id="infoPanel" (collapsed)="collapsed()" (expanded)="expanded()" [collapse]="isCollapsed" #collapse="bs-collapse">
+        <button type="button" class="btn-link float-right" (click)="collapse.hide()" aria-controls="infoPanel" aria-label="Close">
+          <svg class="ml-icon ml-icon-navigation-close" focusable="false" role="presentation">
+            <use href="/assets/icons.svg#navigation-close" />
+          </svg>
+        </button>
+        <div class="ml-info-circle">
+          <svg class="ml-icon ml-icon-bookmark-solid" focusable="false" role="presentation">
+            <use href="/assets/icons.svg#bookmark-solid" />
+          </svg>
+        </div>
+        <div class="text-center">
+        <app-list-information></app-list-information>
+        </div>
+        <div class="text-center" >
+          <button id="addLink" class="btn btn-link" (click)="openCreateLinkModal()">Add your first item</button>
+        </div>
       </div>
-      <div class="text-center">
-       <app-list-information></app-list-information>
-      </div>
-      <div class="text-center" >
-        <button id="addLink" class="btn btn-link" (click)="openCreateLinkModal()">Add your first item</button>
-      </div>
-    </div>
+
     <!-- END: My Links Info Panel -->
 
     <!-- BEGIN: My Links List -->
-    <ul class="list-group list-group-flush" *ngIf="Link.length !== 0">
+    <ul class="list-group list-group-flush">
       <!-- BEGIN: My Link Item-->
       <li *ngFor="let link of Link" class="list-group-item" id="linkItem-{{ link.id }}">
 
@@ -99,6 +104,10 @@
       <!-- END: My Link Item-->
     </ul>
     <!-- END: My Links List -->
+
+    </div>
+    <!-- END: IF -->
+
     <!-- BEGIN: My Links Footer -->
     <div class="card-footer">
       <div class="ml-add-item">
