--- a/src/app/link-settings/link-settings.component.html
+++ b/src/app/link-settings/link-settings.component.html
@@ -29,7 +29,7 @@
       </div>
     </div>
   </div>
-  <p>You have selected {{ index }} 4 items to remove.</p>
+  <p>You have selected 4 items to remove.</p>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-default" (click)="modalRef.hide()">Cancel</button>
