--- a/src/app/list-information/list-information.component.html
+++ b/src/app/list-information/list-information.component.html
@@ -1,2 +1,2 @@
-<h3>{{infoHeading}}</h3>
-<p>{{infoText}}</p>
+<h3 *ngIf="info.heading.length > 0">{{ info.heading }}</h3>
+<p *ngIf="info.text.length > 0">{{ info.text }}</p>
