--- a/src/app/user-links/user-links.component.html
+++ b/src/app/user-links/user-links.component.html
@@ -14,6 +14,7 @@
             <svg class="ml-icon ml-icon-information-solid" focusable="false" role="presentation">
               <use href="/assets/icons.svg#information-solid" />
             </svg>
+            <span class="sr-only">Collapse Information</span>
           </button>
         </div>
         <div class="ml-col">
@@ -21,6 +22,7 @@
             <svg class="ml-icon ml-icon-cog" focusable="false" role="presentation">
               <use href="/assets/icons.svg#cog" />
             </svg>
+            <span class="sr-only">Manage Links</span>
           </button>
         </div>
       </div>
@@ -31,39 +33,40 @@
     <div *ngIf="Link.length !== 0">
 
     <!-- BEGIN: My Links Info Panel -->
-      <div class="card-body collapse" id="infoPanel" (collapsed)="collapsed()" (expanded)="expanded()" [collapse]="isCollapsed" #collapse="bs-collapse">
-        <button type="button" class="btn-link float-right" (click)="collapse.hide()" aria-controls="infoPanel" aria-label="Close">
-          <svg class="ml-icon ml-icon-navigation-close" focusable="false" role="presentation">
-            <use href="/assets/icons.svg#navigation-close" />
-          </svg>
-        </button>
-        <div class="ml-info-circle">
-          <svg class="ml-icon ml-icon-bookmark-solid" focusable="false" role="presentation">
-            <use href="/assets/icons.svg#bookmark-solid" />
-          </svg>
-        </div>
-        <div class="text-center">
-        <app-list-information></app-list-information>
-        </div>
-        <div class="text-center" >
-          <button id="addLink" class="btn btn-link" (click)="openCreateLinkModal()">Add your first item</button>
-        </div>
+    <div class="card-body collapse" id="infoPanel" [collapse]="isCollapsed" #collapse="bs-collapse">
+      <button type="button" class="btn-link float-right" (click)="collapse.hide()" aria-controls="infoPanel" aria-label="Close">
+        <svg class="ml-icon ml-icon-navigation-close" focusable="false" role="presentation">
+          <use href="/assets/icons.svg#navigation-close" />
+        </svg>
+      </button>
+      <div class="ml-info-circle">
+        <svg class="ml-icon ml-icon-bookmark-solid" focusable="false" role="presentation">
+          <use href="/assets/icons.svg#bookmark-solid" />
+        </svg>
       </div>
-
+      <div class="text-center">
+      <app-list-information></app-list-information>
+      </div>
+      <div class="text-center" >
+        <button id="addLink" class="btn btn-link" (click)="openCreateLinkModal()">Add your first item</button>
+      </div>
+    </div>
     <!-- END: My Links Info Panel -->
 
     <!-- BEGIN: My Links List -->
     <ul class="list-group list-group-flush">
+
       <!-- BEGIN: My Link Item-->
       <li *ngFor="let link of Link" class="list-group-item" id="linkItem-{{ link.id }}">
 
         <div class="ml-row">
           <div class="ml-col">
             <div class="btn-group">
-              <button type="button" class="btn-link btn-delete" (click)="openDeleteLinkModal(link.id)">
+              <button type="button" class="btn-link btn-delete" (click)="openDeleteLinkModal(link.id)" title="Delete Link">
                 <svg class="ml-icon ml-icon-navigation-close" focusable="false" role="presentation">
                   <use href="/assets/icons.svg#navigation-close" />
                 </svg>
+                <span class="sr-only">Delete Link</span>
               </button>
             </div>
           </div>
@@ -90,15 +93,11 @@
                 <svg class="ml-icon ml-icon-pencil" focusable="false" role="presentation">
                   <use href="/assets/icons.svg#pencil" />
                 </svg>
+                <span class="sr-only">Edit Link</span>
               </button>
             </div>
           </div>
         </div>
-        <!--div class="ml-row">
-          <div class="ml-col ml-col-expand">
-            <p class="text-right">{{link | json}}</p>
-          </div>
-        </div-->
 
       </li>
       <!-- END: My Link Item-->
@@ -118,6 +117,13 @@
             </svg>
             <span>Add link</span>
           </button>
+          <!--  Reactive Form Trigger
+            <button type="button" class="btn btn-primary" (click)="openExampleFormModal()">
+            <svg class="ml-icon ml-icon-navigation-plus" focusable="false" role="presentation">
+              <use href="/assets/icons.svg#navigation-plus" />
+            </svg>
+            <span class="sr-only">Example Form</span>
+          </button-->
         </div>
       </div>
     </div>
