--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -1,8 +1,19 @@
-#createLinkForm,
-#editLinkForm {
+#linkCreateForm,
+#linkEditForm {
 
   .invisible {
     height: 0;
   }
 
+}
+
+// Validation 
+.ng-valid[required], .ng-valid.required  {
+  border: 1px solid $primary;
+  border-bottom: 4px solid $primary; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border: 1px solid $danger;
+  border-bottom: 4px solid $danger; /* red */
 }
