--- a/src/app/link-edit/link-edit.component.html
+++ b/src/app/link-edit/link-edit.component.html
@@ -15,7 +15,7 @@
           </div>
         </div>
         <label for="mlType" class="invisible">Link Type</label>
-        <input type="hidden" id="mlType" class="form-control" name="mlType" value="External">
+        <input type="hidden" id="mlType" class="form-control" name="mlType">
         <div class="form-row">
           <div class="form-group col-7">
             <label for="mlTitle" class="mlLabel">Link Title<span>*</span></label>
