--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,14 +47,14 @@
   @import "../node_modules/bootstrap/scss/spinners";
   @import "../node_modules/bootstrap/scss/utilities";
   // @import "../node_modules/bootstrap/scss/print";
-
-  @import "./scss/components/btn";
-  @import "./scss/components/card";
-  @import "./scss/components/collapse";
-  @import "./scss/components/forms";
+//
+  // @import "./scss/components/btn";
+  // @import "./scss/components/card";
+  // @import "./scss/components/collapse";
+  // @import "./scss/components/forms";
   @import "./scss/components/icons";
   @import "./scss/components/modal";
   @import "./scss/components/mylinks";
-  @import "./scss/components/stickers";
+  // @import "./scss/components/stickers";
 }
 
