--- a/src/app/link-edit/link-edit.component.html
+++ b/src/app/link-edit/link-edit.component.html
@@ -1,8 +1,8 @@
 <form class="editLinkForm">
   <div class="modal-header">
-    <h4 class="modal-title pull-left">Update Link</h4>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
-      <span aria-hidden="true">&times;</span>
+    <h5 class="modal-title">Update Link</h5>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="bsModalRef.hide()">
+      <span aria-hidden="true">×</span>
     </button>
   </div>
   <div class="modal-body">
