--- a/src/app/link-edit/link-edit.component.html
+++ b/src/app/link-edit/link-edit.component.html
@@ -1,53 +1,100 @@
 <form class="editLinkForm">
+
   <div class="modal-header">
-    <h4 class="modal-title pull-left">Update Link</h4>
+
+    <div class="modal-title">
+      <div *ngIf="linkData.linkType === 'External'">Update Link</div>
+      <div *ngIf="linkData.linkType === 'Ikon'">Customise Ikon content link</div>
+    </div>
+
     <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
+
   </div>
+
   <div class="modal-body">
+
     <div class="container-fluid">
 
       <form id="editeLinkForm" class="needs-validation" novalidate>
-        <div class="form-row">
+
+        <!-- div class="form-row">
           <div class="col-12">
             <p class="text-danger">{{ linkData | json }}</p>
           </div>
-        </div>
+        </div-->
+
         <label for="mlType" class="invisible">Link Type</label>
         <input type="hidden" id="mlType" class="form-control" name="mlType">
-        <div class="form-row">
-          <div class="form-group col-7">
-            <label for="mlTitle" class="mlLabel">Link Title<span>*</span></label>
+
+        <div *ngIf="linkData.linkType === 'External'">
+
+          <div class="form-row">
+
+            <div class="form-group col-7">
+              <label for="mlTitle" class="mlLabel">Link Title<span>*</span></label>
+              <input  type="text" id="mlTitle" [(ngModel)]="linkData.title" 
+                      class="form-control" name="mlTitle" 
+                      placeholder="e.g. Google search" required>
+            </div>
+
           </div>
+
+          <div class="form-row">
+
+            <div class="form-group col-7">
+              <label for="mlUrl" class="mlLabel">Web address<span>*</span></label>
+              <input  type="text" id="mlUrl" [(ngModel)]="linkData.url" 
+                      name="mlUrl" class="form-control" 
+                      placeholder="e.g. https://google.com" required>
+            </div>
+            <div class="form-group col-3">
+              <button type="button" class="btn btn-link" placement="right" tooltip="Please enter the full URL. (including protocol ie: http, https, ftp)">
+                <svg class="ml-icon ml-icon-information-outline" focusable="false" role="presentation">
+                    <use href="/assets/icons.svg#information-outline" />
+                  </svg>
+              </button>
+            </div>
+
+          </div>
+
         </div>
-        <div class="form-row">
-          <div class="form-group col-7">
-            <input type="text" id="mlTitle" [(ngModel)]="linkData.title" class="form-control" name="mlTitle" placeholder="e.g. Google search" required>
+
+        <div *ngIf="linkData.linkType === 'Ikon'">
+
+          <div class="form-row">
+            <div class="form-group col-7">
+              <label for="mlUUid" class="mlLabel">Service's published title</label><br />
+              <a id="mlUUid" href="{{ linkData.linkUUid }}">{{ linkData.linkTitle }}</a>
+            </div>
           </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-7">
-            <label for="mlUrl" class="mlLabel">Web address<span>*</span></label>
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-7">
-            <input type="text" id="mlUrl" [(ngModel)]="linkData.url" name="mlUrl" class="form-control" placeholder="e.g. https://google.com" required>
-          </div>
-          <div class="form-group col-3">
-            <button type="button" class="btn btn-link" placement="right" tooltip="Please enter the full URL. (including protocol ie: http, https, ftp)">
-              <svg class="ml-icon ml-icon-information-outline" focusable="false" role="presentation">
+
+          <div class="form-row">
+            <div class="form-group col-7">
+              <label for="mlTitle" class="mlLabel">Custom title</label>
+              <input type="text" id="mlTitle" [(ngModel)]="linkData.title" name="mlTitle" class="form-control" placeholder="e.g. My custom title">
+            </div>
+            <div class="form-group col-3">
+              <button type="button" class="btn btn-link btn-icon-info" placement="right" tooltip="You can customise the title for your saved Ikon links.">
+                <svg class="ml-icon ml-icon-information-outline" focusable="false" role="presentation">
                   <use href="/assets/icons.svg#information-outline" />
                 </svg>
-            </button>
+              </button>
+            </div>
           </div>
+
         </div>
+
       </form>
+
     </div>
+
   </div>
+
   <div class="modal-footer">
     <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
-    <button type="submit" class="btn btn-success" (click)="updateLink()">Update</button>
+	  <button type="submit" class="btn btn-success" (click)="openModalWithComponent()">Update Link</button>
   </div>
+
 </form>
