--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -22,7 +22,8 @@
   .card-footer {
     background: transparent;
     border-bottom: 1px dotted #d7d7d7;
-    padding: 2px;
+    padding: 1px;
+    height: 44px;
   }
 }
 
