--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
-
 @import "./scss/bootstrap-variables";
-
 @import "../node_modules/animatewithsass/animate.scss";
 
 .ml {
@@ -53,8 +51,10 @@
   @import "./scss/components/collapse";
   @import "./scss/components/forms";
   @import "./scss/components/icons";
+  @import "./scss/components/list-group";
   @import "./scss/components/modal";
   @import "./scss/components/mylinks";
   @import "./scss/components/stickers";
+
 }
 
