--- a/src/app/link-edit/link-edit.component.html
+++ b/src/app/link-edit/link-edit.component.html
@@ -66,14 +66,14 @@
           <div class="form-row">
             <div class="form-group col-7">
               <label for="mlUUid" class="mlLabel">Service's published title</label><br />
-              <a id="mlUUid" href="{{ linkData.linkUUid }}">{{ linkData.linkTitle }}</a>
+              <a id="mlUUid" href="{{ linkData.linkUUid }}">{{ linkData.title }}</a>
             </div>
           </div>
 
           <div class="form-row">
             <div class="form-group col-7">
-              <label for="mlTitle" class="mlLabel">Custom title</label>
-              <input type="text" id="mlTitle" [(ngModel)]="linkData.title" name="mlTitle" class="form-control" placeholder="e.g. My custom title">
+              <label for="mlLinkTitle" class="mlLabel">Custom title</label>
+              <input type="text" id="mlLinkTitle" [(ngModel)]="linkData.linkTitle" name="mlLinkTitle" class="form-control" placeholder="e.g. My custom title">
             </div>
             <div class="form-group col-3">
               <button type="button" class="btn btn-link btn-icon-info" placement="right" tooltip="You can customise the title for your saved Ikon links.">
@@ -94,7 +94,7 @@
 
   <div class="modal-footer">
     <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
-	  <button type="submit" class="btn btn-success" (click)="openModalWithComponent()">Update Link</button>
+	  <button type="submit" class="btn btn-primary" (click)="openModalWithComponent()">Update Link</button>
   </div>
 
 </form>
