--- a/src/app/user-links/user-links.component.html
+++ b/src/app/user-links/user-links.component.html
@@ -32,93 +32,97 @@
     <!-- BEGIN: If -->
     <div *ngIf="Link.length !== 0">
 
-    <!-- BEGIN: My Links Info Panel -->
-    <div class="card-body collapse" id="infoPanel" [collapse]="isCollapsed" #collapse="bs-collapse">
-      <button type="button" class="btn-link float-right" (click)="collapse.hide()" aria-controls="infoPanel" aria-label="Close">
-        <svg class="ml-icon ml-icon-navigation-close" focusable="false" role="presentation">
-          <use href="/assets/icons.svg#navigation-close" />
-        </svg>
-      </button>
-      <div class="ml-info-circle">
-        <svg class="ml-icon ml-icon-bookmark-solid" focusable="false" role="presentation">
-          <use href="/assets/icons.svg#bookmark-solid" />
-        </svg>
+      <!-- BEGIN: My Links Info Panel -->
+      <div class="card-body collapse" id="infoPanel" [collapse]="isCollapsed" #collapse="bs-collapse">
+        <button type="button" class="btn-link float-right" (click)="collapse.hide()" aria-controls="infoPanel" aria-label="Close">
+          <svg class="ml-icon ml-icon-navigation-close" focusable="false" role="presentation">
+            <use href="/assets/icons.svg#navigation-close" />
+          </svg>
+        </button>
+        <div class="ml-info-circle">
+          <svg class="ml-icon ml-icon-bookmark-solid" focusable="false" role="presentation">
+            <use href="/assets/icons.svg#bookmark-solid" />
+          </svg>
+        </div>
+        <div class="text-center">
+        <app-list-information></app-list-information>
+        </div>
+        <div class="text-center" >
+          <button id="addLink" class="btn btn-link" (click)="openCreateLinkModal()">Add your first item</button>
+        </div>
       </div>
-      <div class="text-center">
-      <app-list-information></app-list-information>
-      </div>
-      <div class="text-center" >
-        <button id="addLink" class="btn btn-link" (click)="openCreateLinkModal()">Add your first item</button>
-      </div>
-    </div>
-    <!-- END: My Links Info Panel -->
+      <!-- END: My Links Info Panel -->
+      
+      <!-- BEGIN: My Links List -->
+      <ul class="list-group list-group-flush">
+        
+        <!-- BEGIN: My Link Item-->
+        <li *ngFor="let link of Link  | orderBy: order" class="list-group-item" id="linkItem-{{ link.id }}">
 
-    <!-- BEGIN: My Links List -->
-    <ul class="list-group list-group-flush">
-      <!-- BEGIN: My Link Item-->
-      <li *ngFor="let link of Link" class="list-group-item" id="linkItem-{{ link.id }}">
-
-        <div class="ml-row">
-          <div class="ml-col">
-            <ng-container *ngIf="!show">
-              <div class="ml-sticker ml-sticker-secondary"> 
-                <div calss="ml-inline-item">
+          <div class="ml-row">
+            <div class="ml-col"> 
+              <ng-container *ngIf="!show">
+                <button type="button" class="btn-link btn-delete">
                   <svg class="ml-icon ml-icon-arrow-chevron-thin-right" focusable="false" role="presentation">
                     <use href="/assets/icons.svg#arrow-chevron-thin-right" />
                   </svg>
                   <span class="sr-only">Arrow Icon</span>
+                </button>
+              </ng-container>
+              <ng-container *ngIf="show">
+                <button type="button" class="btn-link btn-delete" (click)="openDeleteLinkModal(link.id)" title="Delete Link" ng-show="editControls">
+                  <svg class="ml-icon ml-icon-navigation-close" focusable="false" role="presentation">
+                    <use href="/assets/icons.svg#navigation-close" />
+                  </svg>
+                  <span class="sr-only">Delete Link</span>
+                </button>
+              </ng-container>
+            </div>
+            <div class="ml-col ml-col-expand">
+              <div class="ml-section">
+                <div *ngIf="link.linkType == 'External'">
+                  <a id="xlink-{{ link.id }}" title="{{ link.title }}" [href]="link.url" target="_blank">
+                    <span>{{ link.title }}</span>
+                    <span class='inline-item'>
+                      <svg aria-hidden='true' class='ml-icon ml-icon-external-link'>
+                        <use href='/assets/icons.svg#external-link'></use>
+                      </svg>
+                    </span>
+                  </a>
+                </div>
+                <div *ngIf="link.linkType === 'Ikon'">
+                  <div *ngIf="link.linkTitle !== ''; else elseBlock">
+                    <a id="ikonl-{{ link.id }}" title="{{ link.linkTitle }}" [href]="link.UUid">{{ link.linkTitle }}</a>
+                  </div>
+                  <ng-template #elseBlock>
+                    <a id="ikonl-{{ link.id }}" title="{{ link.title }}" [href]="link.UUid">{{ link.title }}</a>
+                  </ng-template>
                 </div>
               </div>
-            </ng-container>
+            </div>
             <ng-container *ngIf="show">
-              <button type="button" class="btn-link btn-delete" (click)="openDeleteLinkModal(link.id)" title="Delete Link" ng-show="editControls">
-                <svg class="ml-icon ml-icon-navigation-close" focusable="false" role="presentation">
-                  <use href="/assets/icons.svg#navigation-close" />
-                </svg>
-                <span class="sr-only">Delete Link</span>
-              </button>
+              <div class="ml-col">
+                <button type="button" class="btn-link" (click)="openEditLinkModal(link.id)">
+                  <svg class="ml-icon ml-icon-pencil" focusable="false" role="presentation">
+                    <use href="/assets/icons.svg#pencil" />
+                  </svg>
+                  <span class="sr-only">Edit Link</span>
+                </button>
+              </div>
+              <!--div class="ml-col">
+                <button type="button" class="btn-link">
+                  <svg class="ml-icon ml-icon-reorder" focusable="false" role="presentation">
+                    <use href="/assets/icons.svg#reorder" />
+                  </svg>
+                  <span class="sr-only">Edit Link</span>
+                </button>
+              </div-->
             </ng-container>
           </div>
-          <div class="ml-col ml-col-expand">
-            <div class="ml-section">
-              <div *ngIf="link.linkType == 'External'">
-                <a id="xlink-{{ link.id }}" title="{{ link.title }}" [href]="link.url" target="_blank">
-                  <span>{{ link.title }}</span>
-                  <span class='inline-item'>
-                    <svg aria-hidden='true' class='ml-icon ml-icon-external-link'>
-                      <use href='/assets/icons.svg#external-link'></use>
-                    </svg>
-                  </span>
-                </a>
-              </div>
-              <div *ngIf="link.linkType == 'Ikon'">
-                <a id="ikonl-{{ link.id }}" title="{{ link.linkTitle }}" [href]="link.UUid">{{ link.linkTitle }}</a>
-              </div>
-            </div>
-          </div>
-          <ng-container *ngIf="show">
-            <div class="ml-col">
-              <button type="button" class="btn-link" (click)="openEditLinkModal(link.id)">
-                <svg class="ml-icon ml-icon-pencil" focusable="false" role="presentation">
-                  <use href="/assets/icons.svg#pencil" />
-                </svg>
-                <span class="sr-only">Edit Link</span>
-              </button>
-            </div>
-            <div class="ml-col">
-              <button type="button" class="btn-link">
-                <svg class="ml-icon ml-icon-reorder" focusable="false" role="presentation">
-                  <use href="/assets/icons.svg#reorder" />
-                </svg>
-                <span class="sr-only">Edit Link</span>
-              </button>
-            </div>
-          </ng-container>
-        </div>
-      </li>
-      <!-- END: My Link Item-->
-    </ul>
-    <!-- END: My Links List -->
+        </li>
+        <!-- END: My Link Item-->
+      </ul>
+      <!-- END: My Links List -->
 
     </div>
     <!-- END: IF -->
