--- a/src/scss/_bootstrap-variables.scss
+++ b/src/scss/_bootstrap-variables.scss
@@ -267,10 +267,10 @@ $border-radius:               .15rem;
 // // Font, line-height, and color for body text, headings, and more.
 
 // // stylelint-disable value-keyword-case
-$font-family-sans-serif:      "Open Sans";
+$font-family-sans-serif:         'Open Sans', sans-serif;
 // $font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Open Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 // $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-$font-family-base:            $font-family-sans-serif;
+$font-family-base:               $font-family-sans-serif;
 // // stylelint-enable value-keyword-case
 
 $font-size-base:                 1rem; // Assumes the browser default, typically `16px`
@@ -284,7 +284,7 @@ $font-size-base:                 1rem; // Assumes the browser default, typically
 // $font-weight-bolder:          bolder;
 
 // $font-weight-base:            $font-weight-normal;
-$line-height-base:            1.5;
+$line-height-base:               1.5;
 
 // $h1-font-size:                $font-size-base * 2.5;
 // $h2-font-size:                $font-size-base * 2;
