--- a/src/scss/components/_list-group.scss
+++ b/src/scss/components/_list-group.scss
@@ -1,13 +1,21 @@
-.ml-list-group-item-flex {
+.list-group-item-flex {
     display: flex;
     padding-left: .5rem;
     padding-right: .5rem;
 }
 
-.ml-list-group-item {
-    padding: 4px 0;
+.list-group-item {
+    padding: 6.5px 0;
+    align-items: flex-start !important;
+    background: 0;
+    border-left: 0;
+    border-right: 0;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 20px;
+    padding: 10px;
 }
 
-.ml-list-group-item-flex .ml-col .ml-sticker:only-child {
+.list-group-item-flex .ml-col .ml-sticker:only-child {
     margin-top: .0625rem;
 }
