--- a/src/app/user-links/user-links.component.html
+++ b/src/app/user-links/user-links.component.html
@@ -70,7 +70,7 @@
                 </button>
               </ng-container>
               <ng-container *ngIf="show">
-                <button type="button" class="btn-link btn-delete" (click)="openDeleteLinkModal(link.id)" title="Delete Link" ng-show="editControls">
+                <button type="button" class="btn-link btn-delete" (click)="openDeleteLinkModal(link)" title="Delete Link" ng-show="editControls">
                   <svg class="ml-icon ml-icon-navigation-close" focusable="false" role="presentation">
                     <use href="/assets/icons.svg#navigation-close" />
                   </svg>
